# ferreteria-sistema

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20251127195006_create_productos_table.sql
backend/src/: handlers.rs  main.rs  models.rs  products.rs
frontend/: .gitignore  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: RegistroProducto.tsx  TablaProductos.tsx
frontend/src/hooks/: useAppStatus.ts  useProducts.ts
frontend/src/pages/: HomePage.tsx  productsPage.tsx
